--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,19 +2,22 @@
 
 name: CI
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
-on:
-  push:
-    tags:
-    - '*'
+on: [push]
 
 jobs:
+  release:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Semantic Release
+        uses: cycjimmy/semantic-release-action@v3
+        
   build:
     runs-on: ubuntu-latest
-
+    if: startsWith(github.ref, 'refs/tags')
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Build and Push to Humanitec
       uses: humanitec/build-push-to-humanitec@v1
       with:
