--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v3
-        
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
   build:
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags')
