fix: update releaserc

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,7 +1,60 @@
 {
   "plugins": [
-    ["@semantic-release/npm", {
-      "npmPublish": false
-    }]
+    ["@semantic-release/commit-analyzer", {
+      "preset": "conventionalcommits",
+      "releaseRules": [
+        {
+          "breaking": true,
+          "release": "major"
+        },
+        {
+          "revert": true,
+          "release": "patch"
+        },
+        {
+          "type": "feat",
+          "release": "minor"
+        },
+        {
+          "type": "fix",
+          "release": "patch"
+        },
+        {
+          "type": "build",
+          "scope": "deps",
+          "release": "patch"
+        },
+        {
+          "type": "*",
+          "release": "patch"
+        }
+      ],
+      "parserOpts": {
+        "noteKeywords": ["BREAKING CHANGE", "BREAKING CHANGES", "BREAKING"]
+      }
+    }],
+    ["@semantic-release/release-notes-generator", {
+      "preset": "conventionalcommits",
+      "parserOpts": {
+        "noteKeywords": ["BREAKING CHANGE", "BREAKING CHANGES", "BREAKING"]
+      },
+      "writerOpts": {
+        "commitsSort": ["subject", "scope"]
+      },
+      "presetConfig": {
+        "types": [
+          {"type": "feat", "section": "Features"},
+          {"type": "fix", "section": "Bug Fixes"},
+          {"type": "chore", "section": "Chores"},
+          {"type": "docs", "section": "Docs"},
+          {"type": "style", "section": "Style"},
+          {"type": "refactor", "section": "Refactorings"},
+          {"type": "perf", "section": "Pref changes"},
+          {"type": "test", "section": "Test changes"},
+          {"type": "build", "section": "Build changes"}
+        ]
+      }
+    }],
+    "@semantic-release/github"
   ]
 }
