--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,16 +7,22 @@ on: [push]
 jobs:
   release:
     runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.semantic.outputs.new_release_version }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Semantic Release
+        id: semantic
         uses: cycjimmy/semantic-release-action@v3
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+
   build:
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags')
+    needs:
+      release
+    if: startsWith(github.ref, 'refs/tags') || needs.release.outputs.version != ''
     steps:
     - uses: actions/checkout@v3
     - name: Build and Push to Humanitec
